simpliy dep, use npm

--- a/package.json
+++ b/package.json
@@ -18,13 +18,11 @@
     "proxy",
     "notebook"
   ],
-  "dependencies": {
-    "http-proxy" : "~0.8",
-    "repl" : "~0.1"
-  },
-
   "author": "Matthias Bussonnier",
   "license": "BSD",
   "readmeFilename": "README.md",
-  "gitHead": "598120938d3c322599a967a5fceee171b2d834ef"
+  "gitHead": "598120938d3c322599a967a5fceee171b2d834ef",
+  "dependencies": {
+    "http-proxy": "~0.8.7"
+  }
 }
