--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "notebook-proxy":"./bin/notebook-proxy.js"
+    "notebook-proxy": "./bin/notebook-proxy.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,7 @@
   "gitHead": "598120938d3c322599a967a5fceee171b2d834ef",
   "dependencies": {
     "http-proxy": "~0.8.7",
-    "commander": "~1.1.1"
+    "commander": "~1.1.1",
+    "forever": "~0.9.2"
   }
 }
