--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
   "gitHead": "598120938d3c322599a967a5fceee171b2d834ef",
   "dependencies": {
     "http-proxy": "~0.8.7",
-    "commander": "~1.1.1",
-    "forever": "~0.9.2"
+    "commander": "~1.1.1"
   }
 }
